// Original file: proto/action.proto


export interface SwapExactTokensForETHSupportingFeeOnTransferTokens {
  'amountIn'?: (string);
  'amountOutMin'?: (string);
  'to'?: (string);
  'deadline'?: (number);
  'path'?: (string)[];
}

export interface SwapExactTokensForETHSupportingFeeOnTransferTokens__Output {
  'amountIn': (string);
  'amountOutMin': (string);
  'to': (string);
  'deadline': (number);
  'path': (string)[];
}
